force-app/main/default/objects/Turma__c/fields/Aluno__c.field-meta.xml
<CustomField>
    <fullName>Aluno__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aluno</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Alunos</relationshipLabel>
    <relationshipName>Turmas1</relationshipName>
    <type>Lookup</type>
</CustomField>