force-app/main/default/objects/Turma__c/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <label>Categoria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equipe de transição</fullName>
            </value>
            <value>
                <fullName>Sub 11</fullName>
            </value>
            <value>
                <fullName>Sub 12</fullName>
            </value>
            <value>
                <fullName>Sub 13</fullName>
            </value>
            <value>
                <fullName>Sub 14</fullName>
            </value>
            <value>
                <fullName>Sub 15</fullName>
            </value>
            <value>
                <fullName>Sub 16</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>