force-app/main/default/objects/Turma__c/fields/CodigoTurma__c.field-meta.xml
<CustomField>
    <fullName>CodigoTurma__c</fullName>
    <externalId>true</externalId>
    <label>Código da turma</label>
    <length>20</length>
    <type>Text</type>
</CustomField>