force-app/main/default/objects/Turma__c/fields/DiasTreino__c.field-meta.xml
<CustomField>
    <fullName>DiasTreino__c</fullName>
    <label>Dia(s) de treino</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Segunda-feira</fullName>
            </value>
            <value>
                <fullName>Terça-feira</fullName>
            </value>
            <value>
                <fullName>Quarta-feira</fullName>
            </value>
            <value>
                <fullName>Quinta-feira</fullName>
            </value>
            <value>
                <fullName>Sexta-feira</fullName>
            </value>
            <value>
                <fullName>Sábado</fullName>
            </value>
            <value>
                <fullName>Domingo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>