force-app/main/default/objects/Turma__c/fields/HoraInicioTreino1__c.field-meta.xml
<CustomField>
    <fullName>HoraInicioTreino1__c</fullName>
    <label>Hora de início (Treino 1)</label>
    <type>Time</type>
</CustomField>