force-app/main/default/objects/Turma__c/fields/HoraInicioTreino2__c.field-meta.xml
<CustomField>
    <fullName>HoraInicioTreino2__c</fullName>
    <label>Hora de início (Treino 2)</label>
    <type>Time</type>
</CustomField>