force-app/main/default/objects/Turma__c/fields/Modalidade__c.field-meta.xml
<CustomField>
    <fullName>Modalidade__c</fullName>
    <label>Modalidade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basquete</fullName>
            </value>
            <value>
                <fullName>Handebol</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>