force-app/main/default/objects/Turma__c/fields/NomeEscola__c.field-meta.xml
<CustomField>
    <fullName>NomeEscola__c</fullName>
    <label>Nome da escola</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Turmas</relationshipLabel>
    <relationshipName>Turmas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>