force-app/main/default/objects/Turma__c/fields/Numerovagas__c.field-meta.xml
<CustomField>
    <fullName>Numerovagas__c</fullName>
    <label>Número de vagas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>