force-app/main/default/objects/Turma__c/fields/Programa__c.field-meta.xml
<CustomField>
    <fullName>Programa__c</fullName>
    <label>Programa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PillarDesenvolvimento</fullName>
                <label>Pilar desenvolvimento</label>
            </value>
            <value>
                <fullName>PilarCompetitivo</fullName>
                <label>Pilar competitivo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>