force-app/main/default/objects/Turma__c/fields/QuantidadeAvaliacoes__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeAvaliacoes__c</fullName>
    <label>Quantidade de avaliações</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>