force-app/main/default/objects/Turma__c/fields/Treinador__c.field-meta.xml
<CustomField>
    <fullName>Treinador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Treinador</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Turmas</relationshipLabel>
    <relationshipName>TreinadorTurma</relationshipName>
    <type>Lookup</type>
</CustomField>