force-app/main/default/objects/Turma__c/validationRules/PreencherPrograma.validationRule-meta.xml
<ValidationRule>
    <fullName>PreencherPrograma</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
       ISPICKVAL( Programa__c ,&apos;Desenvolvimento&apos;),
       ISPICKVAL ( SexoTurma__c, &apos;&apos;)

)</errorConditionFormula>
    <errorDisplayField>SexoTurma__c</errorDisplayField>
    <errorMessage>Preencher o campo Sexo da turma.</errorMessage>
</ValidationRule>