force-app/main/default/objects/Turma__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NomeEscola__c</columns>
    <columns>Programa__c</columns>
    <columns>Categoria__c</columns>
    <columns>SexoTurma__c</columns>
    <columns>Treinador__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>