force-app/main/default/objects/Turma__c/listViews/Turmas_Competitivo.listView-meta.xml
<ListView>
    <fullName>Turmas_Competitivo</fullName>
    <columns>NAME</columns>
    <columns>NomeEscola__c</columns>
    <columns>Programa__c</columns>
    <columns>Categoria__c</columns>
    <columns>SexoTurma__c</columns>
    <columns>Treinador__c</columns>
    <columns>Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Programa__c</field>
        <operation>equals</operation>
        <value>PilarCompetitivo</value>
    </filters>
    <label>Turmas Competitivo</label>
</ListView>